--- a/实验报告.md
+++ b/实验报告.md
@@ -53,6 +53,8 @@
 | 15 MHz | 15.28 | 14.72 | 3.33 |
 | 20 MHz | 19.44 | 18.33 | 4.11 |
 
+**图1：** 不同接地方式下归一化耦合系数随频率变化曲线（见 output.png）
+
 ### **4.1 低频段（7 kHz - 100 kHz）特性**
 
 在低频段，干扰电压维持在5.0~6.3 mV的极低水平，耦合系数K均低于0.35%。三种接地状态下的测量结果几乎完全一致，7 kHz时单端和双端接地均为6.3 mV，说明低频下屏蔽轨迹作用不明显。100 kHz时双端接地略有改善（3.5 mV vs 5.4 mV），此外干扰电压随频率略有下降的趋势。
