--- a/实验报告.md
+++ b/实验报告.md
@@ -53,6 +53,8 @@
 | 15 MHz | 15.28 | 14.72 | 3.33 |
 | 20 MHz | 19.44 | 18.33 | 4.11 |
 
+![实验结果曲线](output.png)
+
 **图1：** 不同接地方式下归一化耦合系数随频率变化曲线（见 output.png）
 
 ### **4.1 低频段（7 kHz - 100 kHz）特性**
