添加CEM实验报告B部分及相关数据，包含接地配置对干扰影响的实验结果和分析

--- a/实验报告.md
+++ b/实验报告.md
@@ -1,14 +1,15 @@
+
 # CEM 实验报告
 
-# 第一部分：轨迹间串扰
+# A. 轨迹间串扰
 
-## A/ 屏蔽轨迹及其与地线连接的影响
+## A.1 屏蔽轨迹及其与地线连接的影响
 
-### 1. 实验目的
+### A.1.1 实验目的
 
 研究屏蔽轨迹的接地方式对不同频率下轨迹间串扰的影响，验证容性串扰和感性串扰随频率变化的理论特性。
 
-### 2. 实验设置
+### A.1.2 实验设置
 
 **使用材料：**
 
@@ -23,9 +24,9 @@
 - 输出信号测量于受干扰轨迹
 - 三种接地状态：不接地、单端接地、双端接地
 
-### 3. 实验数据
+### A.1.3 实验数据
 
-### 原始测量数据表
+#### A.1.3.1 原始测量数据表
 
 | 频率 | 输入电压 Uin (V) | 不接地 Uout (mV) | 单端接地 Uout (mV) | 双端接地 Uout (mV) |
 | --- | --- | --- | --- | --- |
@@ -39,7 +40,8 @@
 
 *注：单端接地在某些频率点的数据为估算值，基于双端接地相比有1-2 mV的变化。*
 
-### 归一化耦合系数数据表
+
+#### A.1.3.2 归一化耦合系数数据表
 
 归一化耦合系数定义为：**K = Uout / Uin × 100%**
 
@@ -55,24 +57,74 @@
 
 ![实验结果曲线](output.png)
 
-**图1：** 不同接地方式下归一化耦合系数随频率变化曲线（见 output.png）
 
-### **4.1 低频段（7 kHz - 100 kHz）特性**
+### A.1.4 频段特性分析
+
+#### A.1.4.1 低频段（7 kHz - 100 kHz）特性
 
 在低频段，干扰电压维持在5.0~6.3 mV的极低水平，耦合系数K均低于0.35%。三种接地状态下的测量结果几乎完全一致，7 kHz时单端和双端接地均为6.3 mV，说明低频下屏蔽轨迹作用不明显。100 kHz时双端接地略有改善（3.5 mV vs 5.4 mV），此外干扰电压随频率略有下降的趋势。
 
-### **4.2 中频段（1 MHz - 5 MHz）特性**
+#### A.1.4.2 中频段（1 MHz - 5 MHz）特性
 
 进入中频段后，干扰水平显著上升，从1 MHz的25 mV激增至5 MHz的124 mV。此时双端接地开始显示出明显效果：在1 MHz时可将干扰降低76%（25 mV → 6 mV），在5 MHz时降低82%（124 mV → 22.2 mV）。值得注意的是，单端接地效果仍然有限，与不接地状态相差不大（仅1-2 mV改善）。
 
-### **4.3 高频段（10 MHz - 20 MHz）特性**
+#### A.1.4.3 高频段（10 MHz - 20 MHz）特性
 
 高频段呈现出最显著的串扰现象。不接地时干扰急剧上升，从180 mV (10 MHz)飙升至350 mV (20 MHz)，耦合系数在20 MHz时达到19.44%，接近输入信号的1/5。双端接地在此频段表现出色，抑制率维持在75-79%之间。15 MHz时双端接地干扰显著降低（由原275 mV降至60 mV），单端接地略优于不接地（265 mV vs 275 mV），但仍远不如双端接地。此外，在高频段明显观察到干扰信号与原信号之间存在相位偏移现象。
 
-### **4.4 理论解释**
+### A.1.5 理论解释
 
 上述实验现象可以从电磁耦合机制得到解释。根据容性串扰公式 **I = 2πFCmU** 和感性串扰公式 **U = 2πFMI**，耦合强度与频率成正比。在低频下，频率项较小，容性和感性耦合产生的干扰电流和电压都很微弱，因此屏蔽轨迹的作用不明显。
 
 随着频率上升至MHz级别，耦合效应迅速增强。此时屏蔽轨迹开始发挥作用：对于容性串扰，屏蔽轨迹如同电场中的"雨伞"拦截场线；对于感性串扰，屏蔽轨迹必须与地线形成闭合回路才能有效拦截磁场。单端接地只能提供部分电场屏蔽，无法形成完整的磁屏蔽回路，因此效果有限。
 
 在高频段，多种效应共同作用：趋肤效应使高频电流集中在导体表面，返回电流沿最近路径流动，增强了互感和互容效应；导体呈现传输线特性，特性阻抗成为主导因素；容性和感性耦合的能量趋于等效。相位偏移现象正是由于感性耦合（U滞后于I）和容性耦合（I超前于U）机制同时存在且相位特性不同所致。双端接地形成完整的屏蔽回路，同时拦截电场和磁场，并提供低阻抗返回路径，因此在高频下效果显著。而单端接地由于接地点到另一端的阻抗在高频下不可忽略，无法有效拦截磁通量变化，基本失去屏蔽作用。
+
+
+# B. 接地平面对串扰的影响
+
+## B.1 实验目的
+
+研究接地平面的存在及其连续性对轨迹间串扰的影响，特别是接地平面中裂缝的影响。
+
+## B.2 实验配置
+
+- **测试电路**: CEM1/I/2印刷电路（带接地平面，存在裂缝）
+- **信号源**: 正弦波发生器，输入信号幅值恒定约1.7V（峰峰值）
+- **测试频率范围**: 7kHz - 20MHz
+- **接地平面配置**:
+  - 无额外铜板（基准配置，裂缝存在）
+  - 大铜板（接地面积增加1倍）
+  - 小铜板桥接中间位置（哑铃型连接）
+  - 小铜板桥接边缘位置
+
+## B.3 实验数据
+
+### B.3.1 测量结果汇总表
+
+| 频率 | 无铜板 | 大铜板 | 小铜板(中间) | 小铜板(边缘) |
+|------|--------|--------|-------------|-------------|
+| 7kHz | 12mV | 12mV | - | - |
+| 100kHz | 12mV | 12mV | - | - |
+| 1MHz | 11mV | 7mV | 6mV | ~10mV |
+| 2.5MHz | 21mV | 10mV | 8mV | - |
+| 4MHz | 30mV | 14mV | 10mV | - |
+| 5MHz | 38mV | 18mV | 13mV | 31mV |
+| 10MHz | 70mV | 30mV | 22mV | 64mV |
+| 15MHz | 120mV | 50mV | 40mV | - |
+| 20MHz | 125mV | 60mV | 40mV | 125mV |
+
+*注: 所有干扰值为峰峰值电压*
+![接地平面影响实验结果曲线](plot/output_B.png)
+
+### B.3.2 干扰衰减效果对比
+
+在20MHz测试频率下，不同接地配置的衰减效果为：大铜板配置实现了52%的干扰衰减（从125mV降至60mV），小铜板中间桥接配置达到了68%的衰减（从125mV降至40mV），而小铜板边缘桥接几乎没有衰减效果（保持在125mV）。
+
+## B.4 实验现象分析
+
+实验结果表明：低频时接地平面裂缝影响很小，各种铜板配置效果差异不明显。高频时干扰随频率显著增加，且不同铜板配置对干扰抑制作用明显。中间桥接铜板效果最佳，能大幅降低高频干扰；大铜板次之；边缘桥接几乎无效。
+
+## B.5 理论解释
+
+高频时，返回电流会选择最短路径，裂缝导致回路面积变大，互感增强，串扰加重。中间桥接铜板能有效缩短回流路径，显著降低串扰；边缘桥接无效。低频时影响较小。核心结论：优化接地平面连续性和回流路径比单纯增加面积更重要。
