修正接地平面影响实验结果曲线的图片路径

--- a/实验报告.md
+++ b/实验报告.md
@@ -115,7 +115,7 @@
 | 20MHz | 125mV | 60mV | 40mV | 125mV |
 
 *注: 所有干扰值为峰峰值电压*
-![接地平面影响实验结果曲线](plot/output_B.png)
+![接地平面影响实验结果曲线](output_B.png)
 
 ### B.3.2 干扰衰减效果对比
 
