更新CEM实验报告，添加引言部分及实验结果图表说明，完善实验目的和配置描述

--- a/实验报告.md
+++ b/实验报告.md
@@ -1,6 +1,10 @@
 
 # CEM 实验报告
 
+## 引言
+
+本报告通过在 7 kHz 至 20 MHz 频段内进行的一系列实验，系统研究了屏蔽轨迹、接地平面与屏蔽笼的接地方式对印刷电路板上轨迹串扰和数字传输干扰的影响。实验结合容性与感性耦合理论（I = 2πFCmU，U = 2πFMI），通过测量耦合电压/电流随频率的变化来验证不同防护措施（屏蔽、单端/双端接地、接地平面连续性）的有效性，并为 PCB 设计提供实践性建议。
+
 # A. 轨迹间串扰
 
 ## A.1 屏蔽轨迹及其与地线连接的影响
@@ -56,6 +60,8 @@
 | 20 MHz | 19.44 | 18.33 | 4.11 |
 
 ![实验结果曲线](output.png)
+
+Figure 1 : 接地方式对归一化耦合系数随频率变化的影响
 
 
 ### A.1.4 频段特性分析
@@ -115,7 +121,10 @@
 | 20MHz | 125mV | 60mV | 40mV | 125mV |
 
 *注: 所有干扰值为峰峰值电压*
+
 ![接地平面影响实验结果曲线](output_B.png)
+
+Figure 2 : 接地平面配置对串扰随频率变化的影响
 
 ### B.3.2 干扰衰减效果对比
 
@@ -128,3 +137,42 @@
 ## B.5 理论解释
 
 高频时，返回电流会选择最短路径，裂缝导致回路面积变大，互感增强，串扰加重。中间桥接铜板能有效缩短回流路径，显著降低串扰；边缘桥接无效。低频时影响较小。核心结论：优化接地平面连续性和回流路径比单纯增加面积更重要。
+
+# C. 屏蔽笼与接地连接对传输干扰的影响
+
+## C.1 实验目的
+
+研究金属屏蔽笼及其接地连接方式对数字传输线路电磁干扰的防护效果,验证屏蔽接地的必要性。
+
+## C.2 实验配置
+
+- **受干扰组件**: 数字显示器电路(组件A+B),通过多线连接传输
+- **攻击者组件**: 继电器开关电路,产生瞬态电磁干扰
+- **屏蔽装置**: 金属喉管(屏蔽笼)
+- **接地配置**:
+  - 屏蔽笼不接地
+  - 屏蔽笼单端接地(通过辫子连接)
+  - 屏蔽笼双端接地(通过辫子连接)
+- **测试距离**: 近距离、中距离、远距离(三个不同间隔)
+
+## C.3 实验结果汇总
+
+| 接地配置 | 近距离 | 中距离 | 远距离 |
+|---------|--------|--------|--------|
+| 无屏蔽笼 | 干扰 | 干扰 | 无干扰 |
+| 单端接地 | 干扰 | 干扰 | 无干扰 |
+| 双端接地 | **无干扰** | **无干扰** | **无干扰** |
+
+*注: "干扰"指数字显示器出现计数错误或异常*
+
+## C.4 实验现象分析
+
+实验结果表明:无屏蔽笼或单端接地配置下,近距离和中距离均出现明显干扰,仅在远距离时干扰消失。采用双端接地配置后,所有测试距离均实现完全屏蔽,数字显示器工作正常,未观察到任何计数异常。
+
+## C.5 理论解释
+
+继电器开关产生的瞬态电磁干扰(160kHz振荡,峰值电压约1200V)通过磁场耦合感应到传输线路。单端接地时,屏蔽笼存在高频阻抗路径(辫子长度引入感抗),无法有效分流干扰电流。双端接地形成完整的低阻抗屏蔽回路,干扰电流通过屏蔽层流回地线,避免耦合到信号线。这与第二部分趋肤效应实验结论一致:高频下导体长度直接影响阻抗,**零长度接地(360°接触)** 是最优方案。核心结论:**屏蔽必须配合双端低阻抗接地才能有效防护高频电磁干扰**。
+
+## 结论
+
+实验结果清晰表明：在低频段（kHz 级）串扰较小，屏蔽与接地方式差异不显著；但进入 MHz 级别后，串扰显著增加，双端接地的屏蔽轨迹和连续、短回流路径的接地平面能大幅降低耦合（高频下抑制率可达 70% 以上）。屏蔽笼在未实现低阻抗双端接地时效果有限。保证接地平面连续性、缩短回流路径并采用双端低阻抗接地以提高 PCB 的电磁兼容性。
